k8s/overlays/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-ingress-uat
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - uat.atlas.oply.co
    - api.uat.atlas.oply.co
    - network.uat.atlas.oply.co
    - folio.uat.atlas.oply.co
    secretName: uat-atlas-tls
  - hosts:
    - uat.buildwithruud.com
    secretName: uat-bwr-tls
  - hosts:
    - oplystusa.com
    - uat.oplystusa.com
    secretName: uat-oplystusa-tls
  rules:
  - host: uat.atlas.oply.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-admin
            port:
              number: 80
  - host: api.uat.atlas.oply.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
  - host: uat.buildwithruud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anchor-app
            port:
              number: 80
  - host: network.uat.atlas.oply.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: network-instance
            port:
              number: 80
  - host: oplystusa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anchor-app
            port:
              number: 80
  - host: uat.oplystusa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anchor-app
            port:
              number: 80
  - host: folio.uat.atlas.oply.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: folio
            port:
              number: 80
